--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,8 +15,48 @@
     "mutex": "c",
     "ranges": "c",
     "streambuf": "c",
-    "thread": "c"
-},
+    "thread": "c",
+    "cwchar": "c",
+    "any": "c",
+    "array": "c",
+    "atomic": "c",
+    "codecvt": "c",
+    "compare": "c",
+    "concepts": "c",
+    "cstddef": "c",
+    "cstdio": "c",
+    "cstdlib": "c",
+    "deque": "c",
+    "list": "c",
+    "string": "c",
+    "unordered_map": "c",
+    "vector": "c",
+    "exception": "c",
+    "functional": "c",
+    "memory": "c",
+    "memory_resource": "c",
+    "optional": "c",
+    "string_view": "c",
+    "type_traits": "c",
+    "numeric": "c",
+    "random": "c",
+    "future": "c",
+    "iomanip": "c",
+    "iosfwd": "c",
+    "new": "c",
+    "numbers": "c",
+    "ostream": "c",
+    "ratio": "c",
+    "sstream": "c",
+    "stdexcept": "c",
+    "stop_token": "c",
+    "system_error": "c",
+    "tuple": "c",
+    "typeinfo": "c",
+    "utility": "c",
+    "variant": "c",
+    "version": "c"
+  },
   "C_Cpp.intelliSenseEngine": "default",
   "C_Cpp.default.configurationProvider": "ms-vscode.makefile-tools",
   "breadcrumbs.enabled": true,
